--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Li Nie's Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../static/css/me.css">
+    <link rel="stylesheet" href="./static/css/me.css">
 </head>
 <body>
 
@@ -14,17 +14,13 @@
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui orange header item">Li Nie</h2>
-                <a href="#" class="m-item item m-mobile-hide"><i class="home icon"></i>Home</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="idea icon"></i>Category</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
+                <a href="index.html" class="m-item item m-mobile-hide"><i class="home icon"></i>Home</a>
+                <a href="category.html" class="m-item item m-mobile-hide"><i class="idea icon"></i>Category</a>
+                <a href="tag.html" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
                 <a href="#" class="active m-item item m-mobile-hide"><i class="info icon"></i>About me</a>
-
-                <div class="right m-item item m-mobile-hide">
-                    <div class="ui icon inverted transparent input">
-                        <input type="text" placeholder="Search"><i class="search link icon"></i>
-                    </div>
+                <div class="item right aligned column">
+                    <p class="m-text">Stay hungry, stay foolish, stay doubtful.</p>
                 </div>
-
             </div>
         </div>
 
@@ -35,38 +31,38 @@
     </nav>
 
     <!--  Content  -->
-    <div class="m-container-small m-padded-tb-large">
+    <div class="m-container-small m-padded-tb-big">
         <div class="ui container">
             <div class="ui stackable grid">
-                <div class="nine wide column">
-                    <img src="../static/images/me.jpg" alt="" class="ui rounded image medium">
+                <div class="seven wide column" align="center">
+                    <img src="./static/images/me.jpg" alt="" class="ui rounded image medium">
                 </div>
 
-                <div class="seven wide column">
+                <div class="nine wide column" align="center">
                     <div class="ui top attached segment">
-                        <div class="ui header">About me</div>
+                        <h2 class="ui header">About me</h2>
                     </div>
 
                     <div class="ui attached segment">
-                        <p>Make your move, change the world.</p>
+                        <p class="m-text-large">Make your move, change the world.</p>
                     </div>
 
                     <div class="ui attached segment">
-                        <div class="ui orange basic left pointing label">Coding</div>
-                        <div class="ui orange basic left pointing label">Living</div>
-                        <div class="ui orange basic left pointing label">Reading</div>
-                        <div class="ui orange basic left pointing label">Thinking</div>
+                        <div class="ui orange large basic left pointing label m-margin-tb">Coding</div>
+                        <div class="ui orange large basic left pointing label m-margin-tb">Living</div>
+                        <div class="ui orange large basic left pointing label m-margin-tb">Reading</div>
+                        <div class="ui orange large basic left pointing label m-margin-tb">Thinking</div>
                     </div>
 
                     <div class="ui attached segment">
-                        <div class="ui teal basic left pointing label m-margin-tb">Java</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">Python</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">SQL</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">ML</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">Java</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">Python</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">SQL</div>
-                        <div class="ui teal basic left pointing label m-margin-tb">ML</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">Java</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">Python</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">SQL</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">ML</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">Java</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">Python</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">SQL</div>
+                        <div class="ui teal large basic left pointing label m-margin-tb">ML</div>
                     </div>
 
                     <div class="ui bottom attached segment">
@@ -76,14 +72,18 @@
                         <a target="_blank" href="https://github.com/nieli9697" class="ui circular icon button">
                             <i class="github icon large"></i>
                         </a>
+                        <a target="_blank" href="#" class="ui circular icon button">
+                            <i class="file alternate icon large"></i>Resume
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <br><br><br><br>
 
     <!--  Footer  -->
-    <footer class="ui inverted vertical segment">
+    <footer class="ui inverted vertical segment m-padded-tb-large">
         <div class="ui center aligned container">
             <a target="_blank" class="m-padded-icon" href="https://github.com/nieli9697">
                 <i class="big github icon"></i>
