--- a/category.html
+++ b/category.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Category</title>
+    <title>Li Nie's Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../static/css/me.css">
+    <link rel="stylesheet" href="./static/css/me.css">
 </head>
 <body>
 
@@ -14,17 +14,13 @@
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui orange header item">Li Nie</h2>
-                <a href="#" class="m-item item m-mobile-hide"><i class="home icon"></i>Home</a>
+                <a href="index.html" class="m-item item m-mobile-hide"><i class="home icon"></i>Home</a>
                 <a href="#" class="active m-item item m-mobile-hide"><i class="idea icon"></i>Category</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="info icon"></i>About me</a>
-
-                <div class="right m-item item m-mobile-hide">
-                    <div class="ui icon inverted transparent input">
-                        <input type="text" placeholder="Search"><i class="search link icon"></i>
-                    </div>
+                <a href="tag.html" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
+                <a href="about.html" class="m-item item m-mobile-hide"><i class="info icon"></i>About me</a>
+                <div class="item right aligned column">
+                    <p class="m-text">Stay hungry, stay foolish, stay doubtful.</p>
                 </div>
-
             </div>
         </div>
 
@@ -35,7 +31,7 @@
     </nav>
 
     <!--  Content  -->
-    <div class="m-container-small m-padded-tb-large">
+    <div class="m-container-small m-padded-tb-big">
         <div class="ui container">
             <!--header-->
             <div class="ui top attached segment">
@@ -50,84 +46,70 @@
             </div>
 
             <!--categories-->
-            <div class="ui attached segment m-padded-tb-large">
+            <div class="ui attached segment m-padded-tb-large" id="filter">
                 <div class="ui labeled button m-margin-tb">
-                    <a href="#" class="ui orange button">Backend</a>
+                    <a href="#" class="ui orange button" data-filter="backend">Backend</a>
                     <a class="ui basic orange left pointing label">1</a>
                 </div>
 
                 <div class="ui labeled button m-margin-tb">
-                    <a href="#" class="ui orange button">Fullstack</a>
+                    <a href="#" class="ui orange button" data-filter="fullstack">Fullstack</a>
                     <a class="ui basic orange left pointing label">1</a>
                 </div>
             </div>
 
             <!--listing-->
             <div class="ui top attached orange segment">
-                <div class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small">
-                    <h3 class="ui header">HEADER</h3>
-                    <p>description......</p>
-
-                    <div class="ui stackable grid">
-                        <div class="eleven wide column middle aligned">
-                            <i class="small eye icon"></i> 111
+                <div class="ui accordion">
+                    <div id="proj_2" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small backend fullstack">
+                        <div class="title">
+                            <h3 class="ui header">HEADER</h3>
                         </div>
 
-                        <div class="right aligned five wide column">
-                            <a href="#" target="_blank" class="ui orange basic label">CATEGORY</a>
-                        </div>
-                    </div>
-                </div>
+                        <p class="content">backend fullstack</p>
 
-                <div class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small">
-                    <h3 class="ui header">HEADER</h3>
-                    <p>description......</p>
-
-                    <div class="ui stackable grid">
-                        <div class="eleven wide column middle aligned">
-                            <i class="small eye icon"></i> 111
-                        </div>
-
-                        <div class="right aligned five wide column">
-                            <a href="#" target="_blank" class="ui orange basic label">CATEGORY</a>
+                        <div class="ui stackable grid">
+                            <div class="right aligned  column">
+                                <div class="ui orange basic label">CATEGORY</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small">
-                    <h3 class="ui header">HEADER</h3>
-                    <p>description......</p>
-
-                    <div class="ui stackable grid">
-                        <div class="eleven wide column middle aligned">
-                            <i class="small eye icon"></i> 111
+                    <div id="proj_1" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small backend">
+                        <div class="title">
+                            <h3 class="ui header">HEADER</h3>
                         </div>
 
-                        <div class="right aligned five wide column">
-                            <a href="#" target="_blank" class="ui orange basic label">CATEGORY</a>
+                        <p class="content">backend</p>
+
+                        <div class="ui stackable grid">
+                            <div class="right aligned  column">
+                                <div class="ui orange basic label">CATEGORY</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-            </div>
+                    <div id="proj_0" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small fullstack">
+                        <div class="title">
+                            <h3 class="ui header">HEADER</h3>
+                        </div>
 
-            <!--footer-->
-            <div class="ui bottom attached segment ">
-                <div class="ui middle aligned two column grid m-padded-tb m-padded-lr-responsive_small">
-                    <div class="column">
-                        <a href="#" class="ui  orange basic button">Previous</a>
-                    </div>
-                    <div class="right aligned column">
-                        <a href="#" class="ui  orange basic button">Next</a>
+                        <p class="content">fullstack</p>
+
+                        <div class="ui stackable grid">
+                            <div class="right aligned  column">
+                                <div class="ui orange basic label">CATEGORY</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
+    <br><br><br><br>
 
     <!--  Footer  -->
-    <footer class="ui inverted vertical segment">
+    <footer class="ui inverted vertical segment m-padded-tb-large">
         <div class="ui center aligned container">
             <a target="_blank" class="m-padded-icon" href="https://github.com/nieli9697">
                 <i class="big github icon"></i>
@@ -142,12 +124,18 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+    <script type="text/javascript" src="http://oss.maxcdn.com/semantic-ui/2.1.8/components/accordion.min.js"></script>
+    <script src="static/js/filter.js"></script>
     <script>
         $('.menu.toggle').click(function() {
             $('.m-item').toggleClass('m-mobile-hide');
-        })
+        });
+
+        $('.ui.accordion').accordion();
     </script>
+
 </body>
 </html>
