--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui orange header item">Li Nie</h2>
-                <a href="#" class="m-item item m-mobile-hide"><i class="home icon"></i>Home</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="idea icon"></i>Category</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="info icon"></i>About me</a>
-
-                <div class="right m-item item m-mobile-hide">
-                    <div class="ui icon inverted transparent input">
-                        <input type="text" placeholder="Search"><i class="search link icon"></i>
-                    </div>
+                <a href="#" class="active m-item item m-mobile-hide"><i class="home icon"></i>Home</a>
+                <a href="category.html" class="m-item item m-mobile-hide"><i class="idea icon"></i>Category</a>
+                <a href="tag.html" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
+                <a href="about.html" class="m-item item m-mobile-hide"><i class="info icon"></i>About me</a>
+                <div class="item right aligned column">
+                    <p class="m-text">Stay hungry, stay foolish, stay doubtful.</p>
                 </div>
-
             </div>
         </div>
 
@@ -35,7 +31,7 @@
     </nav>
 
     <!--  Content  -->
-    <div class="m-container m-padded-tb-large">
+    <div class="m-container m-padded-tb-big">
         <div class="ui container">
             <div class="ui stackable grid">
                 <!--LEFT-->
@@ -53,61 +49,48 @@
                     </div>
 
                     <!--listing-->
-                    <div class="ui attached segment">
-                        <div class="ui padded vertical segment m-padded-tb-large">
-                            <h3 class="ui header">HEADER</h3>
-                            <p>description......</p>
-
-                            <div class="ui grid">
-                                <div class="eleven wide column middle aligned">
-                                    <i class="small eye icon"></i> 111
+                    <div class="ui attached segment" id="projects">
+                        <div class="ui accordion">
+                            <div class="ui padded vertical segment m-padded-tb-large">
+                                <div class="title">
+                                    <h3 class="ui header">HEADER</h3>
                                 </div>
 
-                                <div class="right aligned five wide column">
-                                    <a href="#" target="_blank" class="ui orange basic label">CATEGORY</a>
-                                </div>
-                            </div>
-                        </div>
+                                <p class="content">description......</p>
 
-                        <div class="ui padded vertical segment m-padded-tb-large">
-                            <h3 class="ui header">HEADER</h3>
-                            <p>description......</p>
-
-                            <div class="ui grid">
-                                <div class="eleven wide column middle aligned">
-                                    <i class="small eye icon"></i> 111
-                                </div>
-
-                                <div class="right aligned five wide column">
-                                    <a href="#" target="_blank" class="ui orange basic label">CATEGORY</a>
+                                <div class="ui stackable grid">
+                                    <div class="right aligned  column">
+                                        <div class="ui orange basic label">CATEGORY</div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="ui padded vertical segment m-padded-tb-large">
-                            <h3 class="ui header">HEADER</h3>
-                            <p>description......</p>
-
-                            <div class="ui grid">
-                                <div class="eleven wide column middle aligned">
-                                    <i class="small eye icon"></i> 111
+                            <div class="ui padded vertical segment m-padded-tb-large">
+                                <div class="title">
+                                    <h3 class="ui header">HEADER</h3>
                                 </div>
 
-                                <div class="right aligned five wide column">
-                                    <a href="#" target="_blank" class="ui orange basic label">CATEGORY</a>
+                                <p class="content">description......</p>
+
+                                <div class="ui stackable grid">
+                                    <div class="right aligned  column">
+                                        <div class="ui orange basic label">CATEGORY</div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <!--footer-->
-                    <div class="ui bottom attached segment">
-                        <div class="ui middle aligned two column grid">
-                            <div class="column">
-                                <a href="#" class="ui  orange basic button">Previous</a>
-                            </div>
-                            <div class="right aligned column">
-                                <a href="#" class="ui  orange basic button">Next</a>
+                            <div class="ui padded vertical segment m-padded-tb-large">
+                                <div class="title">
+                                    <h3 class="ui header">HEADER</h3>
+                                </div>
+
+                                <p class="content">description......</p>
+
+                                <div class="ui stackable grid">
+                                    <div class="right aligned  column">
+                                        <div class="ui orange basic label">CATEGORY</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -123,7 +106,7 @@
                                     <i class="idea icon"></i>Category
                                 </div>
                                 <div class="right aligned column">
-                                    <a href="#" target="_blank">more <i class="angle double right icon"></i></a>
+                                    <a href="category.html">more <i class="arrow alternate circle right icon"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +134,7 @@
                                     <i class="tags icon"></i>Tag
                                 </div>
                                 <div class="right aligned column">
-                                    <a href="#" target="_blank">more <i class="angle double right icon"></i></a>
+                                    <a href="tag.html">more <i class="arrow alternate circle right icon"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -173,13 +156,13 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
+    <br><br><br><br>
 
     <!--  Footer  -->
-    <footer class="ui inverted vertical segment">
+    <footer class="ui inverted vertical segment m-padded-tb-large">
         <div class="ui center aligned container">
             <a target="_blank" class="m-padded-icon" href="https://github.com/nieli9697">
                 <i class="big github icon"></i>
@@ -194,12 +177,18 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+    <script type="text/javascript" src="http://oss.maxcdn.com/semantic-ui/2.1.8/components/accordion.min.js"></script>
     <script>
-        $('.menu.toggle').click(function() {
-            $('.m-item').toggleClass('m-mobile-hide');
-        })
+            $('.menu.toggle').click(function() {
+                $('.m-item').toggleClass('m-mobile-hide');
+            });
+
+            $('.ui.accordion').accordion();
     </script>
+
 </body>
 </html>
