--- a/category.html
+++ b/category.html
@@ -126,8 +126,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
-    <script type="text/javascript" src="http://oss.maxcdn.com/semantic-ui/2.1.8/components/accordion.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/components/accordion.js"></script>
+    <!--    <script src="https://code.jquery.com/jquery-2.2.0.js"></script>-->
+    <!--    <script type="text/javascript" src="https://oss.maxcdn.com/semantic-ui/2.1.8/components/accordion.min.js"></script>-->
     <script src="static/js/filter.js"></script>
     <script>
         $('.menu.toggle').click(function() {
