--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                     <!--listing-->
                     <div class="ui attached segment" id="projects">
                         <div class="ui accordion">
-                            <div class="ui padded vertical segment m-padded-tb-large">
+                            <div id="proj_2" class="ui padded vertical segment m-padded-tb-large backend fullstack">
                                 <div class="title">
                                     <h3 class="ui header">HEADER</h3>
+
                                 </div>
 
-                                <p class="content">description......</p>
+                                <p class="content">backend fullstack</p>
 
                                 <div class="ui stackable grid">
                                     <div class="right aligned  column">
@@ -65,12 +66,12 @@
                                 </div>
                             </div>
 
-                            <div class="ui padded vertical segment m-padded-tb-large">
+                            <div id="proj_1" class="ui padded vertical segment m-padded-tb-large fullstack">
                                 <div class="title">
                                     <h3 class="ui header">HEADER</h3>
                                 </div>
 
-                                <p class="content">description......</p>
+                                <p class="content">fullstack</p>
 
                                 <div class="ui stackable grid">
                                     <div class="right aligned  column">
@@ -79,9 +80,9 @@
                                 </div>
                             </div>
 
-                            <div class="ui padded vertical segment m-padded-tb-large">
+                            <div id="proj_0" class="ui padded vertical segment m-padded-tb-large">
                                 <div class="title">
-                                    <h3 class="ui header">HEADER</h3>
+                                    <h3 class="ui header">Information Systems Design and Implementation Project</h3>
                                 </div>
 
                                 <p class="content">description......</p>
@@ -113,13 +114,13 @@
 
                         <div class="ui orange segment">
                             <div class="ui fluid vertical menu">
-                                <a href="#" class="item">C1
+                                <a href="#" class="item">Full Stack
                                 <div class="ui orange basic left pointing label">1</div>
                                 </a>
-                                <a href="#" class="item">C1
+                                <a href="#" class="item">Back End
                                     <div class="ui orange basic left pointing label">1</div>
                                 </a>
-                                <a href="#" class="item">C1
+                                <a href="#" class="item">Data Analytics
                                     <div class="ui orange basic left pointing label">1</div>
                                 </a>
                             </div>
@@ -150,7 +151,7 @@
                                 Tag1 <div class="detail">1</div>
                             </a>
                             <a href="#" target="_blank" class="ui orange basic left pointing label m-margin-tb">
-                                Tag1 <div class="detail">1</div>
+                                C# <div class="detail">1</div>
                             </a>
 
                         </div>
