--- a/category.html
+++ b/category.html
@@ -40,7 +40,7 @@
                         <h3 class="ui orange header">Categories</h3>
                     </div>
                     <div class="right aligned column">
-                        <h2 class="class ui orange header m-inline-block m-text-thin"> 3 </h2> Categories in total
+                        <h2 class="class ui orange header m-inline-block m-text-thin"> 3 </h2>&nbsp Categories in total
                     </div>
                 </div>
             </div>
@@ -48,84 +48,30 @@
             <!--categories-->
             <div class="ui attached segment m-padded-tb-large" id="filter">
                 <div class="ui labeled button m-margin-tb">
-                    <a href="#" class="ui orange button" data-filter="backend">Backend</a>
+                    <a href="#" class="ui orange button" data-filter="fullstack">Full Stack</a>
                     <a class="ui basic orange left pointing label">1</a>
                 </div>
 
                 <div class="ui labeled button m-margin-tb">
-                    <a href="#" class="ui orange button" data-filter="fullstack">Fullstack</a>
+                    <a href="#" class="ui orange button" data-filter="backend">Back End</a>
                     <a class="ui basic orange left pointing label">1</a>
                 </div>
-                <input type="text" id="test">
+
+                <div class="ui labeled button m-margin-tb">
+                    <a href="#" class="ui orange button" data-filter="data">Data Analytics</a>
+                    <a class="ui basic orange left pointing label">1</a>
+                </div>
+
             </div>
 
             <!--listing-->
-<!--            <div class="ui top attached orange segment">-->
-<!--                <div class="ui accordion">-->
-<!--                    <div id="proj_2" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small backend fullstack">-->
-<!--                        <div class="title">-->
-<!--                            <h3 class="ui header">HEADER</h3>-->
-<!--                        </div>-->
-
-<!--                        <p class="content">backend fullstack</p>-->
-
-<!--                        <div class="ui stackable grid">-->
-<!--                            <div class="right aligned  column">-->
-<!--                                <div class="ui orange basic label">CATEGORY</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    <div id="proj_1" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small backend">-->
-<!--                        <div class="title">-->
-<!--                            <h3 class="ui header">HEADER</h3>-->
-<!--                        </div>-->
-
-<!--                        <p class="content">backend</p>-->
-
-<!--                        <div class="ui stackable grid">-->
-<!--                            <div class="right aligned  column">-->
-<!--                                <div class="ui orange basic label">CATEGORY</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    <div id="proj_0" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small fullstack">-->
-<!--                        <div class="title">-->
-<!--                            <h3 class="ui header">HEADER</h3>-->
-<!--                        </div>-->
-
-<!--                        <p class="content">fullstack</p>-->
-
-<!--                        <div class="ui stackable grid">-->
-<!--                            <div class="right aligned  column">-->
-<!--                                <div class="ui orange basic label">CATEGORY</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
             <div id="projects"></div>
         </div>
     </div>
     <br><br><br><br>
 
     <!--  Footer  -->
-    <footer class="ui inverted vertical segment m-padded-tb-large">
-        <div class="ui center aligned container">
-            <a target="_blank" class="m-padded-icon" href="https://github.com/nieli9697">
-                <i class="big github icon"></i>
-            </a>
-            <a target="_blank" class="m-padded-icon" href="https://www.linkedin.com/in/li-nie-2a334a17b/">
-                <i class="big linkedin icon"></i>
-            </a>
-            <i class="big envelope outline icon m-padded-icon"></i>
-            <div class="content m-inline-block">nieli9697@utexas.edu</div>
-            <div class="ui inverted section divider"></div>
-            <h4 class="m-text-thin m-text-spaced m-opicity">Learn as you grow, grow as you learn.</h4>
-        </div>
-    </footer>
+    <div id="footer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
@@ -140,9 +86,11 @@
 
         $(function(){
             $(document).ready(function(){
-                $("#projects").load("index.html #projects",function(){//加载完成后设置高亮
+                $("#projects").load("index.html #projects",function(){
                     $('.ui.accordion').accordion();
                 });
+
+                $("#footer").load("index.html #footer");
             });
         });
 
