--- a/tag.html
+++ b/tag.html
@@ -40,7 +40,7 @@
                         <h3 class="ui orange header">Tags</h3>
                     </div>
                     <div class="right aligned column">
-                        <h2 class="class ui orange header m-inline-block m-text-thin"> 3 </h2> Tags in total
+                        <h2 class="class ui orange header m-inline-block m-text-thin"> 8 </h2>&nbsp Tags in total
                     </div>
                 </div>
             </div>
@@ -58,80 +58,37 @@
                 <a href="#" data-filter="mysql" class="ui orange basic left pointing label large m-margin-tb">
                     MySQL <div class="detail">1</div>
                 </a>
+
+                <a href="#" data-filter="spring" class="ui orange basic left pointing label large m-margin-tb">
+                    Spring Boot <div class="detail">1</div>
+                </a>
+
+                <a href="#" data-filter="django" class="ui orange basic left pointing label large m-margin-tb">
+                    Django <div class="detail">1</div>
+                </a>
+
+                <a href="#" data-filter="flask" class="ui orange basic left pointing label large m-margin-tb">
+                    Flask <div class="detail">1</div>
+                </a>
+
+                <a href="#" data-filter="ml" class="ui orange basic left pointing label large m-margin-tb">
+                    Machine Learning <div class="detail">1</div>
+                </a>
+
+                <a href="#" data-filter="c#" class="ui orange basic left pointing label large m-margin-tb">
+                    C# <div class="detail">1</div>
+                </a>
             </div>
 
             <!--listing-->
-            <div class="ui top attached orange segment">
-                <div class="ui accordion">
-                    <div id="proj_2" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small java mysql">
-                        <div class="title">
-                            <h3 class="ui header">HEADER</h3>
-                        </div>
-
-                        <p class="content">java mysql</p>
-
-                        <div class="ui stackable grid">
-                            <div class="row m-padded-top">
-                                <div class="column">
-                                    <a href="#" class="ui basic orange left pointing label m-text-thin">tag</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="proj_1" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small python">
-                        <div class="title">
-                            <h3 class="ui header">HEADER</h3>
-                        </div>
-
-                        <p class="content">python</p>
-
-                        <div class="ui stackable grid">
-                            <div class="row m-padded-top">
-                                <div class="column">
-                                    <a href="#" class="ui basic orange left pointing label m-text-thin">tag</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="proj_0" class="ui vertical segment m-padded-tb-large m-padded-lr-responsive_small mysql">
-                        <div class="title">
-                            <h3 class="ui header">HEADER</h3>
-                        </div>
-
-                        <p class="content">mysql</p>
-
-                        <div class="ui stackable grid">
-                            <div class="row m-padded-top">
-                                <div class="column">
-                                    <a href="#" class="ui basic orange left pointing label m-text-thin">tag</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id="projects"></div>
 
         </div>
     </div>
     <br><br><br><br>
 
     <!--  Footer  -->
-    <footer class="ui inverted vertical segment m-padded-tb-large">
-        <div class="ui center aligned container">
-            <a target="_blank" class="m-padded-icon" href="https://github.com/nieli9697">
-                <i class="big github icon"></i>
-            </a>
-            <a target="_blank" class="m-padded-icon" href="https://www.linkedin.com/in/li-nie-2a334a17b/">
-                <i class="big linkedin icon"></i>
-            </a>
-            <i class="big envelope outline icon m-padded-icon"></i>
-            <div class="content m-inline-block">nieli9697@utexas.edu</div>
-            <div class="ui inverted section divider"></div>
-            <h4 class="m-text-thin m-text-spaced m-opicity">Learn as you grow, grow as you learn.</h4>
-        </div>
-    </footer>
+    <div id="footer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
@@ -143,6 +100,16 @@
     <script>
         $('.menu.toggle').click(function() {
             $('.m-item').toggleClass('m-mobile-hide');
+        });
+
+        $(function(){
+            $(document).ready(function(){
+                $("#projects").load("index.html #projects",function(){
+                    $('.ui.accordion').accordion();
+                });
+
+                $("#footer").load("index.html #footer");
+            });
         });
 
         $('.ui.accordion').accordion();
